Permit running with at least Java 11
thanks to work by eigenraven in LWJGL3ify
as well as work by ChachyDev and others