@@ -1,5 +1,8 @@
 package net.minecraftforge.fml.common.registry;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
@@ -39,22 +42,13 @@ class ItemStackHolderRef {
     private static Object reflectionFactory;
     private static Method newFieldAccessor;
     private static Method fieldAccessorSet;
+    private static MethodHandle fieldSetter;
     private static void makeWritable(Field f)
     {
-        try
-        {
-            if (modifiersField == null)
-            {
-                Method getReflectionFactory = Class.forName("sun.reflect.ReflectionFactory").getDeclaredMethod("getReflectionFactory");
-                reflectionFactory = getReflectionFactory.invoke(null);
-                newFieldAccessor = Class.forName("sun.reflect.ReflectionFactory").getDeclaredMethod("newFieldAccessor", Field.class, boolean.class);
-                fieldAccessorSet = Class.forName("sun.reflect.FieldAccessor").getDeclaredMethod("set", Object.class, Object.class);
-                modifiersField = Field.class.getDeclaredField("modifiers");
-                modifiersField.setAccessible(true);
-            }
-            modifiersField.setInt(f, f.getModifiers() & ~Modifier.FINAL);
-        } catch (Exception e)
-        {
+        try {
+            f.setAccessible(true);
+            fieldSetter = MethodHandles.lookup().unreflectSetter(f);
+        } catch (Exception e) {
             throw Throwables.propagate(e);
         }
     }
@@ -62,22 +56,29 @@ class ItemStackHolderRef {
     public void apply()
     {
         ItemStack is;
-        try
-        {
+        try {
             is = GameRegistry.makeItemStack(itemName, meta, 1, serializednbt);
-        } catch (RuntimeException e)
-        {
-            FMLLog.getLogger().log(Level.ERROR, "Caught exception processing itemstack {},{},{} in annotation at {}.{}", itemName, meta, serializednbt,field.getClass().getName(),field.getName());
+        } catch (RuntimeException e) {
+            FMLLog.getLogger().log(
+                    Level.ERROR,
+                    "Caught exception processing itemstack {},{},{} in annotation at {}.{}",
+                    itemName,
+                    meta,
+                    serializednbt,
+                    field.getClass().getName(),
+                    field.getName());
             throw e;
         }
-        try
-        {
-            Object fieldAccessor = newFieldAccessor.invoke(reflectionFactory, field, false);
-            fieldAccessorSet.invoke(fieldAccessor, null, is);
-        }
-        catch (Exception e)
-        {
-            FMLLog.getLogger().log(Level.WARN, "Unable to set {} with value {},{},{}", this.field, this.itemName, this.meta, this.serializednbt);
+        try {
+            fieldSetter.invoke(is);
+        } catch (Throwable e) {
+            FMLLog.getLogger().log(
+                    Level.WARN,
+                    "Unable to set {} with value {},{},{}",
+                    this.field,
+                    this.itemName,
+                    this.meta,
+                    this.serializednbt);
         }
     }
 }
